<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginRight="0dp"
            android:text="@string/score_name"
            android:textSize="30dp"
            android:fontFamily="cursive"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="0dp"
            android:text="@string/score_scores"
            android:textSize="30dp"
            android:fontFamily="cursive"
            android:textStyle="bold"/>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scoresRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="start"
        android:fontFamily="cursive"
        android:textStyle="bold"/>

        <Button
            android:id="@+id/scores_home_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/scores_home_btn"
            android:onClick="onHomeClicked"/>

</LinearLayout>

</layout>