<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.doasimsaying.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.doasimsaying.MainActivity">

        <TextView
            android:id="@+id/LogoTxtV"
            android:layout_width="314dp"
            android:layout_height="173dp"
            android:fontFamily="cursive"
            android:lineSpacingExtra="14sp"
            android:text="@string/logo"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#38CC38"
            android:textSize="56sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589" />

        <TextView
            android:id="@+id/WelcomeTxtV"
            android:layout_width="326dp"
            android:layout_height="149dp"
            android:fontFamily="cursive"
            android:lineSpacingExtra="14sp"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#0746FF"
            android:textSize="56sp"
            android:textStyle="bold"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/LogoTxtV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

        <Button
            android:id="@+id/musicBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:fontFamily="cursive"
            android:onClick="onMusicClicked"
            android:text="@string/main_music_btn"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/WelcomeTxtV"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355" />

        <Button
            android:id="@+id/EnterBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:onClick="onPlayClicked"
            android:text="@string/main_play_btn"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/howToBtn"
            app:layout_constraintVertical_bias="0.47" />

        <Button
            android:id="@+id/scoresBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:onClick="onScoresClicked"
            android:text="@string/main_scores_btn"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/WelcomeTxtV"
            app:layout_constraintEnd_toStartOf="@+id/musicBtn"
            app:layout_constraintHorizontal_bias="0.227"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355" />

        <Button
            android:id="@+id/howToBtn"
            android:layout_width="195dp"
            android:layout_height="54dp"
            android:layout_marginTop="28dp"
            android:fontFamily="cursive"
            android:onClick="onHowToPlayClicked"
            android:text="@string/how_to_play_btn"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LogoTxtV" />

        <ImageView
            android:id="@+id/howToPlayImgV"
            android:layout_width="340dp"
            android:layout_height="291dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            app:srcCompat="@drawable/how_to_play" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>